@@ -1,6 +1,7 @@
 2011-11-02  6.7.3-3 Cristy  <quetzlzacatenango@image...>
   * Fix small memory leak in the TIFF coder.
   * Support -debug accelerate option.
+  * Support -with-includedir-arch and -with-configdir-arch configure option.
 
 2011-11-01  6.7.3-2 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.3-2, SVN revision 5718
